Sets default game and editor maps. Handles game modes once you start a game.

--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -13,8 +13,8 @@ bSupportsLandscapeLeftOrientation=True
 PreferredLandscapeOrientation=LandscapeLeft
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/BAttleGround.BAttleGround
-EditorStartupMap=/Game/BAttleGround.BAttleGround
+GameDefaultMap=/Game/_Levels/MainMenu.MainMenu
+EditorStartupMap=/Game/_Levels/BattleGround.BattleGround
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
