--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -59,6 +59,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="Left Track Throttle",Scale=-0.500000,Key=Gamepad_LeftShoulder)
 +AxisMappings=(AxisName="Right Track Throttle",Scale=-0.500000,Key=Gamepad_RightShoulder)
++AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=Up)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
