--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -47,6 +47,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Left)
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=MouseY)
@@ -55,11 +56,12 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Left Track Throttle",Scale=1.000000,Key=Gamepad_LeftTriggerAxis)
 +AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
-+AxisMappings=(AxisName="Left Track Throttle",Scale=1.000000,Key=Left)
-+AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="Left Track Throttle",Scale=-0.500000,Key=Gamepad_LeftShoulder)
 +AxisMappings=(AxisName="Right Track Throttle",Scale=-0.500000,Key=Gamepad_RightShoulder)
 +AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="Turn Right",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="Turn Right",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="Turn Left",Scale=1.000000,Key=Left)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
