--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -62,6 +62,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Turn Right",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="Turn Right",Scale=1.000000,Key=Gamepad_LeftX)
 +AxisMappings=(AxisName="Turn Left",Scale=1.000000,Key=Left)
++AxisMappings=(AxisName="Move Backwards",Scale=1.000000,Key=Down)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
