Updated project settings

--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -12,10 +12,6 @@ bSupportsUpsideDownOrientation=False
 bSupportsLandscapeLeftOrientation=True
 PreferredLandscapeOrientation=LandscapeLeft
 
-[/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/MainMenu.MainMenu
-EditorStartupMap=/Game/Levels/BattleGround.BattleGround
-
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 Compiler=VisualStudio2019
 MinimumOSVersion=MSOS_Vista
@@ -71,4 +67,20 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Levels/BattleGround.BattleGround
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprints/BattleTankGameMode_BP.BattleTankGameMode_BP_C
+GlobalDefaultServerGameMode=None
+
 
